<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.intelliviz.myappportfolio.MainActivity">

        <TextView
            android:id="@+id/title_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/title_text"
            android:textIsSelectable="true"
            android:textSize="24sp" />

        <Button
            android:id="@+id/spotify_streamer_id"
            style="@style/AppButton"
            android:layout_below="@+id/title_id"
            android:onClick="onSpotifyStreamerClick"
            android:text="@string/spotify_streamer" />

        <Button
            android:id="@+id/scores_app_id"
            style="@style/AppButton"
            android:layout_below="@+id/spotify_streamer_id"
            android:onClick="onScoresAppClick"
            android:text="@string/scores_app" />

        <Button
            android:id="@+id/lib_app_id"
            style="@style/AppButton"
            android:layout_below="@+id/scores_app_id"
            android:onClick="onLibraryAppClick"
            android:text="@string/library_app" />

        <Button
            android:id="@+id/build_it_bigger_id"
            style="@style/AppButton"
            android:layout_below="@+id/lib_app_id"
            android:onClick="onBuildItBiggerClick"
            android:text="@string/build_it_bigger" />

        <Button
            android:id="@+id/xyz_reader_id"
            style="@style/AppButton"
            android:layout_below="@+id/build_it_bigger_id"
            android:onClick="onXYZReaderClick"
            android:text="@string/xyz_reader" />

        <Button
            android:id="@+id/my_app_id"
            style="@style/AppButton.Red"
            android:layout_below="@+id/xyz_reader_id"
            android:onClick="onCapStoneAppClick"
            android:text="@string/capstone_app" />

    </RelativeLayout>
</ScrollView>
